--- a/info.plist
+++ b/info.plist
@@ -7,7 +7,21 @@
 	<key>category</key>
 	<string>Developer</string>
 	<key>connections</key>
-	<dict/>
+	<dict>
+		<key>5F392ABC-07DF-4E3C-B1FF-271DCA47BDA0</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>618A7E30-E305-4DC7-BD27-BF55F768A61E</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+	</dict>
 	<key>createdby</key>
 	<string>Luke Wang</string>
 	<key>description</key>
@@ -30,7 +44,7 @@
 				<key>argumenttype</key>
 				<integer>0</integer>
 				<key>escaping</key>
-				<integer>68</integer>
+				<integer>102</integer>
 				<key>keyword</key>
 				<string>rd</string>
 				<key>queuedelaycustom</key>
@@ -44,11 +58,9 @@
 				<key>runningsubtext</key>
 				<string>Retrieving search suggestions...</string>
 				<key>script</key>
-				<string>import sys
+				<string>query="{query}"
 
-query = "{query}"
-
-sys.stdout.write(query)</string>
+python rokudoc.py "$query"</string>
 				<key>scriptargtype</key>
 				<integer>0</integer>
 				<key>scriptfile</key>
@@ -58,7 +70,7 @@ sys.stdout.write(query)</string>
 				<key>title</key>
 				<string>Search Roku SDK</string>
 				<key>type</key>
-				<integer>3</integer>
+				<integer>0</integer>
 				<key>withspace</key>
 				<true/>
 			</dict>
@@ -69,6 +81,25 @@ sys.stdout.write(query)</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>{query}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>618A7E30-E305-4DC7-BD27-BF55F768A61E</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
@@ -78,6 +109,13 @@ sys.stdout.write(query)</string>
 		<dict>
 			<key>xpos</key>
 			<integer>170</integer>
+			<key>ypos</key>
+			<integer>170</integer>
+		</dict>
+		<key>618A7E30-E305-4DC7-BD27-BF55F768A61E</key>
+		<dict>
+			<key>xpos</key>
+			<integer>360</integer>
 			<key>ypos</key>
 			<integer>170</integer>
 		</dict>
